# robot_folders

./: .buildinfo  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  README.rst  aliases.html  configuration.html  faq.html  fzrob-complete.sh  fzrob_sources.sh  genindex.html  global_functions.py  index.html  install.sh  installation.html  misc_workspace.html  objects.inv  pyproject.toml  readme.md  readme.txt  rob_folders-complete.sh  robot_folders.py  sample_config.yaml  search.html  searchindex.js  setup.py  source_environment.sh  usage.html
.robot_folders/: setup.py  userconfig_distribute.py
Docker/: Dockerfile  README.md  entrypoint.sh  source_global.sh
_sources/: aliases.rst.txt  configuration.rst.txt  index.rst.txt  usage.rst.txt
checkout/: readme.txt
commands/: active_environment.py  add_environment.py  cd.py  change_environment.py  make.py  source_active_environment.py  source_most_recent_env.py
config/: userconfig_distribute.yaml
debian/: changelog  control  rules
demos/: example.bash  readme.txt
docs/: aliases.rst  conf.py  configuration.rst  faq.rst  index.rst  installation.rst  misc_workspace.rst  requirements.txt  usage.rst
git_hooks/: post-merge
helpers/: __init__.py  build_helpers.py  directory_helpers.py  workspace_chooser.py
robot_folders.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
robot_folders_environment_configs/: euroc_freestyle.yaml  sample_config.yaml
scripts/: readme.txt
tests/: fixture_ros_installation.py  test_active_environment.py  test_add_delete.py  test_which.py  (+5 more)
(+70 files in other folders)
