[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_folders"
version = "0.3.0"
description = "A tool to manage multiple workspaces (mainly around ROS)"
dependencies = [
    "Click>=7.0",
    "gitpython",
    "PyYaml",
    "vcstool"
]

[project.scripts]
rob_folders = "robot_folders.main:cli"

[tool.setuptools]
script-files = [
    "bin/fzirob_source.sh",
    "bin/get_zsh_source_command.py",
    "bin/rob_folders-complete.sh",
    "bin/source_environment.sh",
]
include-package-data = true
